--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,7 +30,6 @@
         </dependency>
 
         <dependency>
-            <!--        Эта зависимость тянет компоненты спринга их тоже нужно сканировать-->
             <groupId>liga.medical</groupId>
             <artifactId>common-services</artifactId>
         </dependency>
@@ -45,6 +44,11 @@
         <dependency>
             <groupId>liga.medical</groupId>
             <artifactId>monitoring-dto</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
     </dependencies>
