--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,11 +64,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.version}</version>
+                <configuration>
+                    <mainClass>liga.medical.medicalmonitoring.core.MessageAnalyzerApplication</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <id>build-info</id>
                         <goals>
-                            <goal>build-info</goal>
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
