--- a/dependency-management-bom/pom.xml
+++ b/dependency-management-bom/pom.xml
@@ -28,12 +28,18 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${springboot.test.version}</version>
                 <scope>test</scope>
             </dependency>
-
 
             <dependency>
                 <groupId>liga.medical</groupId>
